Crash when adding specular texture slot in texture paint mode #114848

Closed
opened 2023-11-14 16:05:05 +01:00 by Sun Kim · 2 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-13 23:46, hash: 7e8557e6c64e
Worked: 3.6

Confirmed in 4.0 RC too.

Short description of error

Crash when adding Specular texture slot in texture paint mode

Exact steps for others to reproduce the error

  • Switch to Texture Paint mode
  • From the texture slot at the top center, add Specular
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-13 23:46, hash: `7e8557e6c64e` Worked: 3.6 Confirmed in 4.0 RC too. **Short description of error** Crash when adding Specular texture slot in texture paint mode **Exact steps for others to reproduce the error** - Switch to Texture Paint mode - From the texture slot at the top center, add Specular
Sun Kim added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-11-14 16:05:05 +01:00
Member

Hi, thanks for the report. I can confirm, will check

Hi, thanks for the report. I can confirm, will check
Pratik Borhade self-assigned this 2023-11-15 05:42:03 +01:00
Member

Caused by 1d265eed5d o_O

Caused by 1d265eed5dcc09d26a90e11e00c4a965ec00f99e o_O
Pratik Borhade added this to the 4.0 milestone 2023-11-15 06:15:54 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-16 09:56:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114848
No description provided.