source/blender/editors/sculpt_paint/paint_image_proj.cc
@@ -6512,7 +6512,7 @@ enum {
 
 static const EnumPropertyItem layer_type_items[] = {
     {LAYER_BASE_COLOR, "BASE_COLOR", 0, "Base Color", ""},
-    {LAYER_SPECULAR, "SPECULAR", 0, "Specular", ""},
+    {LAYER_SPECULAR, "SPECULAR", 0, "Specular IOR Level", ""},
     {LAYER_ROUGHNESS, "ROUGHNESS", 0, "Roughness", ""},
     {LAYER_METALLIC, "METALLIC", 0, "Metallic", ""},
     {LAYER_NORMAL, "NORMAL", 0, "Normal", ""},
